# pyflex

./: .gitignore  .travis-update-gh-pages.sh  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
_modules/: index.html  pyflex.html
_modules/pyflex/: config.html  flexwin.html  interval_scheduling.html  stalta.html  utils.html  window.html  window_selector.html
_sources/: index.rst.txt  index.txt
doc/: Makefile  README.md  conf.py  convert.py  index.ipynb
pyflex/: __init__.py  config.py  flexwin.py  interval_scheduling.py  stalta.py  utils.py  window.py  window_selector.py
pyflex/tests/: test_code_formatting.py  test_pyflex.py  test_window.py  test_window_selector.py
src/pyflex/: __init__.py  config.py  flexwin.py  interval_scheduling.py  stalta.py  utils.py  window.py  window_selector.py
src/pyflex/tests/: __main__.py  test_code_formatting.py  test_pyflex.py  test_utils.py  test_window.py  test_window_selector.py
src/pyflex/tests/baseline_images/: picked_windows.png.init
tests/: test_code_formatting.py  test_pyflex.py
