[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflex"
version = "0.2.1"
description = "Python port of the FLEXWIN package"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "adjTomo Dev Team"},
    {email = "adjtomo@gmail.com"}
]
dependencies = [
    "obspy",
]

[project.optional-dependencies]
dev = ["pytest", "ipython", "ipdb", "flake8", "nose"]

[project.urls]
homepage = "https://github.com/adjtomo/"
documentation = "https://adjtomo.github.io/pyflex"
repository = "https://github.com/adjtomo/pyflex"

